--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -5,9 +5,9 @@
   <form action="{{ url_for('login') }}" method=post>
     <dl>
       <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
+      <dd><input type=text name=name>
+      <dt>Age:
+      <dd><input type=text name=age>
       <dd><input type=submit value=Login>
     </dl>
   </form>
